# libedit-rs

./: Cargo.toml  README.md  deny.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
libedit/: Cargo.toml  build.rs
libedit-sys/: Cargo.toml  build.rs
libedit-sys/src/: bindings-macos.rs  bindings.rs  lib.rs
libedit/examples/: repl.rs
libedit/src/: completion.rs  editline.rs  error.rs  hint.rs  history.rs  lib.rs  shim.c  shim.rs  suggestion.rs  term.rs  tokenizer.rs  trace.rs  wstr.rs
libedit/tests/: integration.rs
